tests/golden/type_errors/array_find_non_array.cd
find(1, fun (value) { return true; });
