tests/golden/type_errors/array_find_non_array.err
Type error at 1:37: find expects array as first argument, got number
  find(1, fun (value) { return true; });
                                      ^
